# diff-gaussian-rasterization

./: CMakeLists.txt  rasterize_points.cu  rasterize_points.h
cuda_rasterizer/: auxiliary.h  backward.cu  backward.h  config.h  forward.cu  forward.h  rasterizer.h  rasterizer_impl.cu
diff_gaussian_rasterization/: __init__.py
